
Segue Change Log


v. 2.2.7.1 (2009-02-02)
----------------------------------------------------
This release fixes a few minor issues with the media library and improves support
for Middlebury's MiddMedia service.

See the change log for more details. 

----

 Upgrades from versions prior to 2.2.5.0 require running system updaters
located under Admin Tools --> Segue Updates. 

----

 This Segue release uses Harmoni 1.9.3 and Polyphony 1.4.10.
		
		
	* Bug Fix: 
		MediaLibrary: Fixed Javascript error in IE 7 that occurred when opening a
		plugin for editing.
		(2009-02-02 - Adam Franco)
		
	* New feature: 
		MediaLibrary: MiddMedia library now displays thumbnails for videos.
		(2009-02-02 - Adam Franco)
		
	* New feature: 
		MediaLibrary: MiddMedia library now displays embeded previews of media.
		(2009-02-02 - Adam Franco)
		
	* New feature: 
		MediaLibrary:MiddMedia library now displays a link to help in the LIS wiki.
		(2009-02-02 - Adam Franco)
		
	* New feature: 
		MediaLibrary: MiddMedia library now allows refreshing of the file list.
		(2009-02-02 - Adam Franco)
	



v. 2.2.7.0 (2009-01-28)
----------------------------------------------------
This release adds support for external media libraries with support for Middlebury's
new MiddMedia service included. A new 'audio' text-template is included for
embedding an MP3 player in TextAndImages blocks and text-areas now get an 'Embed
Audio/Video' button. When migrating sites from Segue1 installations, mp3 downloads
are now converted to AudioPlayer plugins. The Portal styling has been updated to
better highlight the selected folder.

See the change log for more details. 

----

 Upgrades from versions prior to 2.2.5.0 require running system updaters
located under Admin Tools --> Segue Updates. 

----

 This Segue release uses Harmoni 1.9.2 and Polyphony 1.4.10.
		
		
	* New feature: 
		MediaLibrary: Added support for additional external MediaLibrary tabs.
		(2009-01-27 - Adam Franco)
		
	* New feature: 