@@ -24,7 +24,7 @@ located under Admin Tools --> Segue Updates.
 
 ----
 
- This Segue release uses Harmoni 1.9.3 and Polyphony 1.4.10.
+ This Segue release uses Harmoni 1.9.3 and Polyphony 1.4.11.
 
 
 Downloads
@@ -80,7 +80,7 @@ located under Admin Tools --> Segue Updates.
 
 ----
 
- This Segue release uses Harmoni 1.9.3 and Polyphony 1.4.10.
+ This Segue release uses Harmoni 1.9.3 and Polyphony 1.4.11.
 
 
 
