@@ -35,9 +35,13 @@
 <br>
 <br>----
 <br>
-<br> This Segue release uses Harmoni 1.9.3 and Polyphony 1.4.10.</p>
+<br> This Segue release uses Harmoni 1.9.3 and Polyphony 1.4.11.</p>
 <ul>
 		
+		<li>
+<b>Bug Fix:</b> MediaLibrary: File library now reloads every time the media library opens.
+<br>
+<br>When repeatedly adding files and making both image and text-links to them the listings in the two panels would get out of sync. Now they are reloaded every time the panel is opened. (<em>2009-02-02 - Adam Franco</em>)<br> (<em>reported by Alex Chapin of Middlebury College</em>)</li>
 		<li>
 <b>Bug Fix:</b> MediaLibrary: Fixed Javascript error in IE 7 that occurred when opening a plugin for editing. (<em>2009-02-02 - Adam Franco</em>)</li>
 		<li>
