@@ -16,8 +16,17 @@ located under Admin Tools --> Segue Updates.
 
 ----
 
- This Segue release uses Harmoni 1.9.3 and Polyphony 1.4.10.
+ This Segue release uses Harmoni 1.9.3 and Polyphony 1.4.11.
 		
+		
+	* Bug Fix: 
+		MediaLibrary: File library now reloads every time the media library opens.
+		
+		When repeatedly adding files and making both image and text-links to them
+		the listings in the two panels would get out of sync. Now they are reloaded
+		every time the panel is opened.
+		(2009-02-02 - Adam Franco)
+		(reported by Alex Chapin of Middlebury College)
 		
 	* Bug Fix: 
 		MediaLibrary: Fixed Javascript error in IE 7 that occurred when opening a
